--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+<!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
 
     <application
         android:name=".MyApplication"
@@ -18,15 +19,8 @@
         android:theme="@style/Theme.RcApp"
         tools:targetApi="31" >
         <activity
-            android:name=".AgentActivity"
-            android:exported="true"
-            android:label="@string/title_activity_agent"
-            android:theme="@style/Theme.RcApp">
-        </activity>
-        <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
